[gd_scene load_steps=9 format=3 uid="uid://bj685ovcakwgf"]

[ext_resource type="Script" uid="uid://bna8id1qu8qm0" path="res://scenes/alien.gd" id="1_2dkue"]
[ext_resource type="Texture2D" uid="uid://m4ub6oll4ikv" path="res://assets/Invaders/Invader3-1.png" id="2_2dkue"]
[ext_resource type="AudioStream" uid="uid://bs6gsbaeib73j" path="res://assets/sfx/explosion.wav" id="3_s7230"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7i6w"]
size = Vector2(11, 8)

[sub_resource type="Animation" id="Animation_4og7w"]
resource_name = "AnimatonAlien"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.76666665),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_qrpw8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_syy4b"]
resource_name = "destroy"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"elimination"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i4hjd"]
_data = {
&"AnimatonAlien": SubResource("Animation_4og7w"),
&"RESET": SubResource("Animation_qrpw8"),
&"destroy": SubResource("Animation_syy4b")
}

[node name="alien2" type="CharacterBody2D" groups=["aliens"]]
script = ExtResource("1_2dkue")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_2dkue")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_h7i6w")

[node name="AnimationAlien" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i4hjd")
}
autoplay = "AnimatonAlien"

[node name="MovingTimer" type="Timer" parent="." groups=["aliens"]]
wait_time = 0.3

[node name="spawnPoint" type="Marker2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_s7230")

[connection signal="timeout" from="MovingTimer" to="." method="_on_moving_timer_timeout"]
